# Irodori-TTS

./: .dockerignore  .gitignore  Dockerfile  EOS_ENDPOINT.md  README.md  api_server.py  convert_checkpoint_to_safetensors.py  gradio_app.py  gradio_app_voicedesign.py  infer.py  prepare_manifest.py  pyproject.toml  requirements.txt  test_api_server.py  train.py
configs/: train_500m_v3_lora.yaml  train_500m_v3_phase1_body.yaml  train_500m_v3_phase2_duration.yaml
docs/: parameters.md
irodori_tts/: codec.py  config.py  dataset.py  duration.py  eos.py  gradio_emoji_palette.py  inference_runtime.py  lora.py  model.py  rf.py  watermark.py
